update what we do page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -59,10 +59,10 @@
         </section>
         <section class="col-sm-6 text-left">
           <img src="/assets/images/website.jpg" alt="">
-          <h3>Websites</h3>
+          <h3>Development</h3>
           <p>
             We build beautiful and enjoyable online experiences in the latest technologies. Whether it’s a
-            marketing site or an ecommerce system, let the tech evaporate from your concern.
+            marketing site or an ecommerce system, let the tech evaporate from your concern and engage your audience.
           </p>
 
           <p>
