--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -1,5 +1,7 @@
-<div class="white-bg">
+<div class="white-bg white-bg--with-image">
   <section class="container-fluid">
+    <img src="/assets/images/design.jpg" alt="">
+
     <app-back-button></app-back-button>
 
     <header>
@@ -12,21 +14,53 @@
       possible and open your eyes to breath-taking design through composition, contrast, colour and experience.
     </p>
 
+    <section class="white-bg__section">
+      <header>
+        <h2 class="text-left">Website Design</h2>
+      </header>
+
+      <p class="text-lead">
+        We have vast experience in website design. We implement your brand into a user-centric website. We strive to make
+        the <a [routerLink]="'/ux'">User Experience</a> a practical one as well as enjoyable.
+      </p>
+    </section>
+
+    <section class="white-bg__section">
+      <header>
+        <h2 class="text-left">Packaging Design</h2>
+      </header>
+
+      <p class="text-lead">
+        We love traditional design as well as digital. Packaging and poster design as well as stationary.
+      </p>
+    </section>
+
+    <section class="white-bg__section">
+      <header>
+        <h2 class="text-left">Illustration</h2>
+      </header>
+
+      <p class="text-lead">
+        We can do illustrations of all shapes and sizes for any medium, be it print, video or websites.
+      </p>
+    </section>
+
     <p>
       If you need a fresh style, come say hi.
     </p>
+
+    <app-get-in-touch></app-get-in-touch>
 
     <section>
       <h2>Check out our other services</h2>
 
       <ul class="list-plain">
-        <li><a href="https://jupiterandthegiraffe.com">Strategy</a></li>
-        <li><a href="https://jupiterandthegiraffe.com">Branding Agency</a></li>
+        <li><a [routerLink]="'/strategy'">Brand Strategy</a></li>
+        <li><a [routerLink]="'/branding'">Branding Agency</a></li>
         <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
-        <li><a href="https://jupiterandthegiraffe.com">Web Development Agency</a></li>
+        <li><a [routerLink]="'/web-development'">Web Development Agency</a></li>
       </ul>
     </section>
 
-    <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
