--- a/src/app/pages/what/what.component.scss
+++ b/src/app/pages/what/what.component.scss
@@ -28,4 +28,61 @@
     border: 1px solid $color-mine-shaft;
     text-align: center;
   }
+
+  &__fixed-title {
+    text-align: left;
+    border: none;
+    margin-bottom: 50px;
+    opacity: .3;
+    transition: opacity .3s ease, color .3s ease;
+    display: block;
+    color: $color-black !important;
+
+    &--active {
+      opacity: 1;
+      color: $color-malibu !important;
+    }
+  }
+
+  &__fixed-titles-wrap {
+    position: relative;
+    display: none;
+
+    @include md {
+      display: block;
+    }
+  }
+
+  &__fixed-titles {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+
+    &--no-title {
+      .what-we-do__fixed-title {
+        opacity: 1;
+      }
+    }
+  }
+
+  &__first-section {
+    padding-top: 50px;
+    @include md {
+      padding-top: 100px;
+    }
+  }
+
+  &__intro {
+    @include md {
+      min-height: 500px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+  }
+
+  &__title {
+    margin-top: 0;
+  }
 }
