make user data recieve from wordrpess and in service

--- a/src/app/misc/location/location.component.html
+++ b/src/app/misc/location/location.component.html
@@ -40,7 +40,7 @@
         <a [routerLink]="['/branding/brand-messaging']" class="link-plain">brand messaging</a>,
         <a [routerLink]="['/branding/photography']" class="link-plain">photography</a>,
         <a [routerLink]="['/branding/typography']" class="link-plain">typography</a> and
-        <a [routerLink]="['/design']" class="link-plain">design</a>. This all comes together to reflects your brand.
+        <a [routerLink]="['/service/design']" class="link-plain">design</a>. This all comes together to reflects your brand.
       </p>
 
       <p>
