--- a/src/app/misc/ux/ux.component.html
+++ b/src/app/misc/ux/ux.component.html
@@ -5,14 +5,14 @@
     <h1>UX (User Experience)</h1>
 
     <p>
-      User Experience <i>(or UX)</i> is a core part to <a [routerLink]="['/web-development']">website development</a>.
+      User Experience <i>(or UX)</i> is a core part to <a [routerLink]="['/service/web-development']">website development</a>.
       UX strips away all of the design and focuses on the user journey's. This helps optimise those journey's and make
       your website or app as easy to use as possible.
     </p>
 
     <p>
       We always think from the users perspective in any piece of work we do. The users are established during the
-      <a [routerLink]="['/strategy']">Strategy</a> phase of the project where we outline 'user profiles'
+      <a [routerLink]="['/service/strategy']">Strategy</a> phase of the project where we outline 'user profiles'
     </p>
 
     <p>
