--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -55,10 +55,10 @@
       <h2>Check out our other services</h2>
 
       <ul class="list-plain">
-        <li><a [routerLink]="'/strategy'">Brand Strategy</a></li>
-        <li><a [routerLink]="'/branding'">Branding Agency</a></li>
+        <li><a [routerLink]="'/service/strategy'">Brand Strategy</a></li>
+        <li><a [routerLink]="'/service/branding'">Branding Agency</a></li>
         <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
-        <li><a [routerLink]="'/web-development'">Web Development Agency</a></li>
+        <li><a [routerLink]="'/service/web-development'">Web Development Agency</a></li>
       </ul>
     </section>
 
