--- a/src/app/pages/strategy/strategy.component.html
+++ b/src/app/pages/strategy/strategy.component.html
@@ -67,9 +67,9 @@
 
       <ul class="list-plain">
         <li><a href="https://jupiterandthegiraffe.com">Brand Strategy</a></li>
-        <li><a [routerLink]="'/branding'">Branding Agency</a></li>
-        <li><a [routerLink]="'/design'">Design Agency</a></li>
-        <li><a [routerLink]="'/web-development'">Web Development Agency</a></li>
+        <li><a [routerLink]="'/service/branding'">Branding Agency</a></li>
+        <li><a [routerLink]="'/service/design'">Design Agency</a></li>
+        <li><a [routerLink]="'/service/web-development'">Web Development Agency</a></li>
       </ul>
     </section>
 
