--- a/src/app/pages/person/person.component.html
+++ b/src/app/pages/person/person.component.html
@@ -49,7 +49,7 @@
         <h2>Favourite books</h2>
       </header>
 
-      <div class="row text-center">
+      <div class="row text-center" *ngIf="person.acf.books">
         <div class="col-sm" *ngFor="let book of person.acf.books">
           <a *ngIf="book.link; else noLink;" href="{{book.link}}">
             <figure *ngIf="book.image; else noImage">
