--- a/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/pages/terms-and-conditions/terms-and-conditions.component.html
@@ -1,7 +1,7 @@
 <div class="white-bg">
   <section class="container-fluid">
-    <h1>{{title}}</h1>
+    <h1>{{content.title.rendered}}</h1>
 
-    <div [innerHTML]="content"></div>
+    <div [innerHTML]="content.content.rendered"></div>
   </section>
 </div>
