get client case studies from Wordpress

--- a/src/app/case-studies/boombocs/boombocs.component.html
+++ b/src/app/case-studies/boombocs/boombocs.component.html
@@ -41,7 +41,7 @@
 
         <p>
           It was also important that we made sure that we could get results given short deadlines.
-          <a [routerLink]="['/web-development/ecommerce']">eCommerce</a> sites are notoriously in-depth, with account pages, checkout journeys and product pages.
+          <a [routerLink]="['/development/ecommerce']">eCommerce</a> sites are notoriously in-depth, with account pages, checkout journeys and product pages.
           We proposed the idea of highlighting key pages that we could give attention to and deliver those initially and launch sooner rather than later.
           This was agreed and the stage was set.
         </p>
@@ -91,8 +91,8 @@
         </header>
 
         <p>
-          The existing site was built in <a [routerLink]="['/web-development/shopify']">Shopify</a>, a platform we’ve not used before.
-          Having a knowledge of <a [routerLink]="['/web-development/wordpress']">Wordpress</a> really helped with the understanding of these types of applications.
+          The existing site was built in <a [routerLink]="['/development/shopify']">Shopify</a>, a platform we’ve not used before.
+          Having a knowledge of <a [routerLink]="['/development/wordpress']">Wordpress</a> really helped with the understanding of these types of applications.
           We were able to create ‘sections’ that can be edited from within Shopify,
           giving BoomBocs complete control of the content and imagery.
           You also have access to the API so you are able to query products and information about certain settings.
