--- a/src/app/case-studies/epoch-brand-website/epoch-brand-website.component.html
+++ b/src/app/case-studies/epoch-brand-website/epoch-brand-website.component.html
@@ -226,15 +226,15 @@
           <p>
             The site was designed with responsiveness at its core so that it functions effortlessly on any device. We opted
             for a side navigation bar to help streamline and unclutter the overall canvas whilst simultaneously giving it a
-            uniqueness that stands out. The technology under the hood of EPOCH is <a [routerLink]="['/web-development/wordpress']">Wordpress</a>.
+            uniqueness that stands out. The technology under the hood of EPOCH is <a [routerLink]="['/development/wordpress']">Wordpress</a>.
             We opted for this as the client knows the software and the site did not require anything more technologically from a front end perspective such
-            as <a [routerLink]="['/web-development/react']">React</a> or <a [routerLink]="['/web-development/vue']">Vue</a>.
+            as <a [routerLink]="['/development/react']">React</a> or <a [routerLink]="['/development/vue']">Vue</a>.
             With Wordpress’ flexibility in terms of plugins combined with the competency of the client,
             we had confidence they could extend the functionality and wouldn’t compromise the site.
           </p>
 
           <p>
-            The site lives on <a [routerLink]="['/web-development/aws']">AWS</a>. An EC2 container running LAMP. Once again, for simplicity containerisation and a separate
+            The site lives on <a [routerLink]="['/development/aws']">AWS</a>. An EC2 container running LAMP. Once again, for simplicity containerisation and a separate
             RDS was not needed. In true agile fashion, it’s important that EPOCH got the site up and running and getting
             sponsorship without overcomplicating the architecture and delaying launch.
           </p>
