--- a/src/app/case-studies/northstar/northstar.component.html
+++ b/src/app/case-studies/northstar/northstar.component.html
@@ -35,7 +35,7 @@
         </header>
 
         <p>
-          They asked us to revamp their existing <a [routerLink]="['/service/web-development']">website</a> to something more modern and practical.
+          They asked us to revamp their existing <a [routerLink]="['/service/development']">website</a> to something more modern and practical.
           We started with an initial meeting discussing what they do as a company and what they liked and disliked about their current website.
           Interestingly the things they liked from their website (built nearly 10 years ago) were unarguably consistent with the themes desired from today's websites.
           It's just that they had been executed in a fashion popularised by the time (which now looked outdated).
