--- a/src/app/case-studies/veratrak/veratrak.component.html
+++ b/src/app/case-studies/veratrak/veratrak.component.html
@@ -36,7 +36,7 @@
 
         <p>
           We were asked to create an identity for their upcoming launch which involved a <a [routerLink]="['/branding/identity']">logo</a> and a
-          <a [routerLink]="['/service/web-development']">website</a>.
+          <a [routerLink]="['/service/development']">website</a>.
           We’re very excited by their technology and with buzz-words floating around like ‘blockchain’ we couldn’t resist getting involved.
         </p>
 
@@ -105,7 +105,7 @@
         </p>
 
         <p>
-          We were able to build a simple website like this using Jekyll, a <a [routerLink]="['/service/web-development']">static website builder</a>.
+          We were able to build a simple website like this using Jekyll, a <a [routerLink]="['/service/development']">static website builder</a>.
           Editing the content can be made simple using data files which allow user-friendly editing and struck a balance between a CMS-less website (to be added later) and a website that could be released imminently.
         </p>
 
