--- a/src/app/misc/angular/angular.component.html
+++ b/src/app/misc/angular/angular.component.html
@@ -13,7 +13,7 @@
 
     <p>
       <a href="https://angular.io/" nofollow noreferrer>Angular</a> is a Typescript-based framework built by Google. Its use is for building component-based front-end applications for the web.
-      Similar to that of <a [routerLink]="['/web-development/vue']">Vue</a>, Angular is a larger library that has all its tools 'out of the box'.
+      Similar to that of <a [routerLink]="['/development/vue']">Vue</a>, Angular is a larger library that has all its tools 'out of the box'.
     </p>
 
     <p>
