--- a/src/app/misc/cms/cms.component.html
+++ b/src/app/misc/cms/cms.component.html
@@ -11,7 +11,7 @@
     </p>
 
     <p>
-      Our CMS of choice is <a [routerLink]="['/web-development/wordpress']">Wordpress</a>. Wordpress is used by over 28% of all websites on the internet,
+      Our CMS of choice is <a [routerLink]="['/development/wordpress']">Wordpress</a>. Wordpress is used by over 28% of all websites on the internet,
       and by 59% of all websites using a known content management system, followed by <a href="https://www.joomla.org/" nofollow noreferrer>Joomla</a> and
       <a href="https://www.drupal.org/" nofollow noreferrer>Drupal</a>.
     </p>
