--- a/src/app/misc/location/location.component.html
+++ b/src/app/misc/location/location.component.html
@@ -69,13 +69,13 @@
       <p>
         An amazing website can only be crafted from the best design and when it meets the latest technologies. We are experienced
         in building enterprise-level websites and honing the skills necessary and bringing it to smaller markets. We stretch to build
-        <a [routerLink]="['/web-development/cms']">CMS</a> and <a [routerLink]="['/web-development/ecommerce']">eCommerce</a> sites on platforms like
-        <a [routerLink]="['/web-development/wordpress']">Wordpress</a> and <a [routerLink]="['/web-development/shopify']">Shopify</a> or we can use the latest
-        technologies like <a [routerLink]="['/web-development/vue']">Vue</a>, <a [routerLink]="['/web-development/angular']">Angular</a> or <a [routerLink]="['/web-development/react']">React</a>.
+        <a [routerLink]="['/development/cms']">CMS</a> and <a [routerLink]="['/development/ecommerce']">eCommerce</a> sites on platforms like
+        <a [routerLink]="['/development/wordpress']">Wordpress</a> and <a [routerLink]="['/development/shopify']">Shopify</a> or we can use the latest
+        technologies like <a [routerLink]="['/development/vue']">Vue</a>, <a [routerLink]="['/development/angular']">Angular</a> or <a [routerLink]="['/development/react']">React</a>.
       </p>
 
       <p>
-        Learn more about <a [routerLink]="['/service/web-development']">Development</a>
+        Learn more about <a [routerLink]="['/service/development']">Development</a>
       </p>
     </section>
 
