--- a/src/app/misc/react/react.component.html
+++ b/src/app/misc/react/react.component.html
@@ -22,7 +22,7 @@
 
     <p>
       Jupiter and the giraffe have experience building single-page applications with <a href="https://reactjs.org/" nofollow="" norefferer="">React.js</a>.
-      We love to use React in combination with a headless <a [routerLink]="['/web-development/cms']">CMS</a> to give you ultimate control over your content.
+      We love to use React in combination with a headless <a [routerLink]="['/development/cms']">CMS</a> to give you ultimate control over your content.
     </p>
 
     <p>
