--- a/src/app/misc/vue/vue.component.html
+++ b/src/app/misc/vue/vue.component.html
@@ -14,13 +14,13 @@
 
     <p>
       Vue is an open-source framework for building front-end JavaScript applications. Its benefits over something like
-      <a [routerLink]="['/web-development/angular']">Angular</a> is its lightweight size and easy adoption rate.
+      <a [routerLink]="['/development/angular']">Angular</a> is its lightweight size and easy adoption rate.
       It was built by an ex-Google engineer and has grown rapidly in popularity over the last few years.
     </p>
 
     <p>
       Jupiter and the giraffe have experience building single-page applications with <a href="https://vuejs.org/" nofollow="" norefferer="">Vue.js</a>.
-      We love to use Vue in combination with a headless <a [routerLink]="['/web-development/cms']">CMS</a> to give you ultimate control over your content.
+      We love to use Vue in combination with a headless <a [routerLink]="['/development/cms']">CMS</a> to give you ultimate control over your content.
     </p>
 
     <p>
