--- a/src/app/pages/web-development/web-development.component.html
+++ b/src/app/pages/web-development/web-development.component.html
@@ -19,10 +19,10 @@
       </header>
 
       <p>
-        We have years of experience in the industry, using technologies such as <a [routerLink]="['/web-development/react']">React</a>,
-        <a [routerLink]="['/web-development/angular']">Angular</a> and <a [routerLink]="['/web-development/vue']">Vue</a>
-        or building brochure sites to complete <a [routerLink]="['/web-development/ecommerce']">eCommerce</a>
-        and <a [routerLink]="['/web-development/wordpress']">Wordpress</a> systems or <a [routerLink]="['/web-development/shopify']">Shopify</a> themes.
+        We have years of experience in the industry, using technologies such as <a [routerLink]="['/development/react']">React</a>,
+        <a [routerLink]="['/development/angular']">Angular</a> and <a [routerLink]="['/development/vue']">Vue</a>
+        or building brochure sites to complete <a [routerLink]="['/development/ecommerce']">eCommerce</a>
+        and <a [routerLink]="['/development/wordpress']">Wordpress</a> systems or <a [routerLink]="['/development/shopify']">Shopify</a> themes.
       </p>
     </section>
 
@@ -43,7 +43,7 @@
       </header>
 
       <p class="text-lead">
-        Need a <a [routerLink]="['/web-development/cms']">CMS</a>? We got you covered. With our extensive Wordpress experience
+        Need a <a [routerLink]="['/development/cms']">CMS</a>? We got you covered. With our extensive Wordpress experience
         we can build you a website where you have complete control of the content.
       </p>
     </section>
