--- a/src/app/pages/what/what.component.html
+++ b/src/app/pages/what/what.component.html
@@ -83,12 +83,12 @@
           <h3>Make sure it screams how awesome you are when you’re not able to.</h3>
 
           <p class="what-we-do--tagline">
-            We build beautiful and enjoyable <a [routerLink]="['/service/web-development']">online experiences</a> that let your brand shine.
+            We build beautiful and enjoyable <a [routerLink]="['/service/development']">online experiences</a> that let your brand shine.
             Whether its a marketing site or an ecommerce system, let the tech evaporate from your concern and engage your audience.
           </p>
 
           <p class="what-we-do__prompt" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="300">
-            What's this <a [routerLink]="['/service/web-development']">web development</a> service all about?
+            What's this <a [routerLink]="['/service/development']">web development</a> service all about?
           </p>
         </section>
       </div>
