--- a/src/app/misc/ux/ux.component.html
+++ b/src/app/misc/ux/ux.component.html
@@ -5,7 +5,7 @@
     <h1>UX (User Experience)</h1>
 
     <p>
-      User Experience <i>(or UX)</i> is a core part to <a [routerLink]="['/service/web-development']">website development</a>.
+      User Experience <i>(or UX)</i> is a core part to <a [routerLink]="['/service/development']">website development</a>.
       UX strips away all of the design and focuses on the user journey's. This helps optimise those journey's and make
       your website or app as easy to use as possible.
     </p>
