--- a/src/app/misc/wordpress/wordpress.component.html
+++ b/src/app/misc/wordpress/wordpress.component.html
@@ -5,12 +5,12 @@
     <h1>Wordpress</h1>
 
     <p>
-      Wordpress is our go-to <a [routerLink]="['/web-development/cms']">CMS</a>. It's a powerful content management tool that has a variety of applications.
+      Wordpress is our go-to <a [routerLink]="['/development/cms']">CMS</a>. It's a powerful content management tool that has a variety of applications.
       What was once a blogging platform is now a very powerful website tool with lots of support and functionality.
     </p>
 
     <p>
-      We've used <a [routerLink]="['/web-development/wordpress']">Wordpress</a> on many of our website because of it's simple to use interface that many of our clients have had experience in.
+      We've used <a [routerLink]="['/development/wordpress']">Wordpress</a> on many of our website because of it's simple to use interface that many of our clients have had experience in.
       It can even be used to build eCommerce websites so its versatility should not be undermined.
     </p>
 
