--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -58,7 +58,7 @@
         <li><a [routerLink]="'/service/strategy'">Brand Strategy</a></li>
         <li><a [routerLink]="'/service/branding'">Branding Agency</a></li>
         <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
-        <li><a [routerLink]="'/service/web-development'">Web Development Agency</a></li>
+        <li><a [routerLink]="'/service/development'">Web Development Agency</a></li>
       </ul>
     </section>
 
