--- a/src/app/pages/home/friends/friends.component.html
+++ b/src/app/pages/home/friends/friends.component.html
@@ -13,11 +13,11 @@
 
     <ul class="row list-unstyled friends__list">
       <li class="col-sm-4 col-4 friends__list-item" *ngFor="let friend of friends">
-        <a [routerLink]="makeUrl(friend.content.rendered)" class="friends__link" *ngIf="friend.content.rendered; else noLink;">
+        <a [routerLink]="'/case-study/' + friend.slug" class="friends__link" *ngIf="friend.content.rendered; else noLink;">
           <img
-            *ngIf="showMyElement"
+            *ngIf="showMyElement && friend.acf.logo"
             class="img-fluid friends__image"
-            [src]="friend._embedded['wp:featuredmedia'][0].source_url"
+            [src]="friend.acf.logo.url"
             [attr.alt]="friend.title.rendered">
         </a>
         <ng-template #noLink>
