--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -66,7 +66,7 @@
           </p>
 
           <p>
-            Learn more about <a [routerLink]="['/service/web-development']">websites</a>.
+            Learn more about <a [routerLink]="['/service/development']">websites</a>.
           </p>
         </section>
       </div>
