--- a/src/app/pages/strategy/strategy.component.html
+++ b/src/app/pages/strategy/strategy.component.html
@@ -69,7 +69,7 @@
         <li><a href="https://jupiterandthegiraffe.com">Brand Strategy</a></li>
         <li><a [routerLink]="'/service/branding'">Branding Agency</a></li>
         <li><a [routerLink]="'/service/design'">Design Agency</a></li>
-        <li><a [routerLink]="'/service/web-development'">Web Development Agency</a></li>
+        <li><a [routerLink]="'/service/development'">Web Development Agency</a></li>
       </ul>
     </section>
 
