--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -13,19 +13,20 @@
     {{error.status}}: {{ error.statusText }}
   </h3>
   <ul class="work__list list-unstyled" *ngSwitchDefault="">
-    <li class="work__item" *ngFor="let workItem of work.work" [style.background-image]="'url(/assets/images/' + workItem.image + ')'">
-      <a *ngIf="workItem.link; else noLink" [routerLink]="'/case-study' + workItem.link" class="work__item-link">
+    <li class="work__item" *ngFor="let workItem of work" [style.background-image]="'url(' + workItem._embedded['wp:featuredmedia'][0].source_url + ')'">
+      <a *ngIf="workItem.content.rendered; else noLink" [routerLink]="'/case-study/' + workItem.slug" class="work__item-link">
         <div class="container-fluid">
-          <h3>{{workItem.title}}</h3>
+          <h3>{{workItem.title.rendered}}</h3>
           <h4>The brief:</h4>
-          <p>{{workItem.content}}</p>
+
+          <div [innerHTML]="workItem.acf.brief"></div>
 
           <p class="work__case-study">View case study
             <app-dots-component></app-dots-component>
           </p>
 
           <ul class="work__tags">
-            <li *ngFor="let tag of workItem.tags" class="work__tag"><a
+            <li *ngFor="let tag of workItem.acf.tags" class="work__tag"><a
               [routerLink]="['/service/' + tag.replace(' ', '-')]">{{
               tag }}</a></li>
           </ul>
@@ -37,12 +38,12 @@
           class="work__item-link"
         >
           <div class="container-fluid">
-            <h3>{{workItem.title}}</h3>
+            <h3>{{workItem.title.rendered}}</h3>
             <h4>The brief:</h4>
-            <p>{{workItem.content}}</p>
+            <p>{{workItem.acf.brief}}</p>
 
             <ul class="work__tags">
-              <li *ngFor="let tag of workItem.tags" class="work__tag"><a
+              <li *ngFor="let tag of workItem.acf.tags" class="work__tag"><a
                 [routerLink]="['/service/' + tag.replace(' ', '-')]">{{
                 tag }}</a></li>
             </ul>
